--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -26,6 +26,10 @@ body {
   margin-left: 20px;
 }
 
+.mt-20 {
+  margin-top: 20px;
+}
+
 .section-header {
     background-color: #008000; /* Green header */
     color: white;
@@ -141,4 +145,81 @@ body {
 
 #logoutButton{
   cursor: pointer;
+}
+
+/* Card Container */
+.card {
+  background-color: #fff;
+  /* border: 1px solid #ddd; */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 100%;
+}
+
+/* Card Header */
+.card-header {
+  background-color: #d9edf7;
+  padding: 16px;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+/* Card Body */
+.card-body {
+  padding: 16px;
+  font-size: 1em;
+  color: #333;
+}
+
+.status-ticket {
+  width: 15px;
+  height: 15px;
+  background-color: red;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.color-green{
+  color: #008000;
+}
+
+.card-transaksi {
+  background-color: #b2dfee; /* Light blue background */
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  position: relative;
+  overflow: hidden;
+}
+.date-badge {
+  background-color: #0a5766; /* Darker blue background */
+  color: white;
+  padding: 5px 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 0 0 10px 0;
+}
+.card-transaksi-body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.product-info {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.status-badge {
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: white;
+}
+.status-success {
+  background-color: #4CAF50; /* Green for success */
+}
+.status-pending {
+  background-color: #FFC107; /* Yellow for pending */
 }
